--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remix-run/react": "^1.16.0",
     "@remix-run/serve": "^1.16.0",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.12.12",
     "isbot": "^3.6.5",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.11.0",
