--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "prisma": "^4.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "upgrade": "^1.1.0"
+    "upgrade": "^1.1.0",
+    "zod": "^3.21.4",
+    "zodix": "^0.4.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.16.0",
