--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "remix build",
     "deploy": "fly deploy --remote-only",
     "dev": "remix dev",
-    "start": "remix-serve build",
+    "start": "cross-env NODE_ENV=production netlify dev",
     "typecheck": "tsc",
     "format": "prettier \"app/**/*.ts\" \"app/**/*.tsx\" --write . "
   },
   "dependencies": {
+    "@netlify/functions": "^1.6.0",
     "@prisma/client": "^4.11.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.1",
