--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@prisma/client": "^4.11.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.1",
-    "@remix-run/node": "^1.16.0",
-    "@remix-run/react": "^1.16.0",
-    "@remix-run/serve": "^1.16.0",
+    "@remix-run/netlify": "^1.16.1",
+    "@remix-run/node": "^1.16.1",
+    "@remix-run/react": "^1.16.1",
+    "@remix-run/serve": "^1.16.1",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.12",
     "isbot": "^3.6.5",
@@ -33,8 +34,8 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.2.5",
-    "@remix-run/dev": "^1.16.0",
-    "@remix-run/eslint-config": "^1.16.0",
+    "@remix-run/dev": "^1.16.1",
+    "@remix-run/eslint-config": "^1.16.1",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
