--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier \"app/**/*.ts\" \"app/**/*.tsx\" --write . "
   },
   "dependencies": {
+    "@clerk/remix": "^2.6.1",
     "@netlify/functions": "^1.6.0",
     "@prisma/client": "^4.11.0",
     "@radix-ui/react-icons": "^1.3.0",
