--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@netlify/functions": "^1.6.0",
     "@prisma/client": "^4.11.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^1.2.1",
     "@remix-run/netlify": "^1.16.1",
     "@remix-run/node": "^1.16.1",
