--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
-    "build": "remix build",
+    "build": "prisma generate && remix build",
     "deploy": "fly deploy --remote-only",
     "dev": "remix dev",
     "start": "cross-env NODE_ENV=production netlify dev",
