--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@flydotio/dockerfile": "^0.2.5",
     "@remix-run/dev": "^1.16.1",
     "@remix-run/eslint-config": "^1.16.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
