--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ node_modules
 *.csv
 *.pdf
 prisma/acmg_clinvartojson.json
+prisma/acmg_gene_list.json
+prisma/acmg-clinvar-data.ts
+prisma/gnomad_lof_metrics.json
+prisma/gnomad_plof_symbols.json
+prisma/seed-acmg-clinvar.ts
