--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^3.1.12",
     "@remix-run/netlify": "^1.17.1",
     "@remix-run/node": "^1.17.1",
@@ -31,11 +33,11 @@
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.12",
     "isbot": "^3.6.5",
+    "pdfjs-dist": "^3.4.120",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^7.1.2",
     "upgrade": "^1.1.0",
     "zod": "^3.21.4",
     "zodix": "^0.4.0"
