--- a/package.json
+++ b/package.json
@@ -15,23 +15,37 @@
   "dependencies": {
     "@clerk/remix": "^2.6.1",
     "@netlify/functions": "^1.6.0",
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^4.16.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@remix-run/netlify": "^1.17.1",
     "@remix-run/node": "^1.17.1",
     "@remix-run/react": "^1.17.1",
     "@remix-run/serve": "^1.17.1",
+    "@tiptap/extension-bullet-list": "^2.0.3",
+    "@tiptap/extension-code": "^2.0.3",
+    "@tiptap/extension-highlight": "^2.0.3",
+    "@tiptap/extension-image": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/extension-ordered-list": "^2.0.3",
+    "@tiptap/extension-subscript": "^2.0.3",
+    "@tiptap/extension-superscript": "^2.0.3",
+    "@tiptap/extension-text-style": "^2.0.3",
+    "@tiptap/extension-typography": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "cloudinary": "^1.37.1",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.12",
     "isbot": "^3.6.5",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "upgrade": "^1.1.0",
@@ -46,6 +60,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "prisma": "^4.16.0",
     "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
