--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.12",
     "isbot": "^3.6.5",
+    "lucide-react": "^0.248.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
